Update py check, all newbies listed and tested now

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -383,6 +383,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import xrspatial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import xlrd"
    ]
   },
@@ -659,8 +668,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city = osmnx.gdf_from_place('Berkeley, California')\n",
-    "osmnx.plot_shape(osmnx.project_gdf(city));"
+    "city = osmnx.geocode_to_gdf('Berkeley, California, US')\n",
+    "osmnx.plot_footprints(osmnx.project_gdf(city));"
    ]
   },
   {
@@ -669,7 +678,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add pyrosm example"
+    "from pyrosm import get_data\n",
+    "# Download data for the city of Helsinki\n",
+    "fp = get_data(\"Helsinki\", directory=\"./\")\n",
+    "print(fp)\n",
+    "\n",
+    "# Get filepath to test PBF dataset\n",
+    "fp = pyrosm.get_data(\"test_pbf\")\n",
+    "print(\"Filepath to test data:\", fp)\n",
+    "\n",
+    "# Initialize the OSM object\n",
+    "osm = pyrosm.OSM(fp)\n",
+    "\n",
+    "# See the type\n",
+    "print(\"Type of 'osm' instance: \", type(osm))\n",
+    "\n",
+    "from pyrosm import get_data\n",
+    "\n",
+    "# Pyrosm comes with a couple of test datasets\n",
+    "# that can be used straight away without\n",
+    "# downloading anything\n",
+    "fp = get_data(\"test_pbf\")\n",
+    "\n",
+    "# Initialize the OSM parser object\n",
+    "osm = pyrosm.OSM(fp)\n",
+    "\n",
+    "# Read all drivable roads\n",
+    "# =======================\n",
+    "drive_net = osm.get_network(network_type=\"driving\")\n",
+    "drive_net.plot()\n",
+    "\n",
+    "! rm Helsinki.osm.pbf"
    ]
   },
   {
@@ -742,7 +781,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert us.tiff to COG with rio-cogeo"
+    "# Convert us.tiff to COG with rio-cogeo\n",
+    "! rio cogeo create us.tif us_cog.tif\n",
+    "! rio cogeo validate us_cog.tif"
    ]
   },
   {
@@ -751,7 +792,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add rioxarray + xarray_leaflet example (testing xarray too)"
+    "# rioxarray + xarray_leaflet\n",
+    "us = rioxarray.open_rasterio(\"us_cog.tif\")\n",
+    "from ipyleaflet import Map\n",
+    "\n",
+    "m = Map(zoom=1, basemap=basemaps.CartoDB.DarkMatter)\n",
+    "m"
    ]
   },
   {
@@ -760,7 +806,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! rm us.tif"
+    "l = us.rio.reproject(\"EPSG:4326\").sel(band=2).leaflet.plot(m)\n",
+    "l.interact(opacity=(0.0,1.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! rm us.tif us_cog.tif"
    ]
   },
   {
