Replace RODBC for rpostgis and RPostgre

--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -272,7 +272,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(RODBC)"
+    "library(rpostgis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "library(RPostgres)"
    ]
   },
   {
