Update Dockerfile to run on R 4.0 and checker accordingly

--- a/check_r_stack.ipynb
+++ b/check_r_stack.ipynb
@@ -15,12 +15,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "library(arm)"
+    "### TidyVerse"
    ]
   },
   {
@@ -29,7 +27,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(feather)"
+    "libs <- c('BiocManager',\n",
+    "            'devtools',\n",
+    "            'rmarkdown',\n",
+    "            'tidyverse',\n",
+    "            'vroom',\n",
+    "            'gert'\n",
+    "          )\n",
+    "lapply(libs, require, character.only = TRUE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DB backends:"
    ]
   },
   {
@@ -38,7 +50,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(geojsonio)"
+    "libs <- c('arrow',\n",
+    "            'dbplyr',\n",
+    "            'DBI',\n",
+    "            'dtplyr',\n",
+    "            'RMariaDB',\n",
+    "            'RPostgres',\n",
+    "            'RSQLite',\n",
+    "            'fst'\n",
+    "         )\n",
+    "lapply(libs, require, character.only = TRUE)      "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Geospatial"
    ]
   },
   {
@@ -47,7 +75,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(ggmap)"
+    "libs <- c('RColorBrewer',\n",
+    "            'Randomfields',\n",
+    "            'RNetCDF',\n",
+    "            'classInt',\n",
+    "            'deldir',\n",
+    "            'gstat',\n",
+    "            'hdf5r',\n",
+    "            'lidR',\n",
+    "            'mapdata',\n",
+    "            'maptools',\n",
+    "            'mapview',\n",
+    "            'ncdf4',\n",
+    "            'proj4',\n",
+    "            'raster',\n",
+    "            'rgdal',\n",
+    "            'rgeos',\n",
+    "            'rlas',\n",
+    "            'sf',\n",
+    "            'sp',\n",
+    "            'spacetime',\n",
+    "            'spatstat',\n",
+    "            'spatialreg',\n",
+    "            'spdep',\n",
+    "            'stars',\n",
+    "            'tidync',\n",
+    "            'tmap',\n",
+    "            'geoR',\n",
+    "            'geosphere'\n",
+    "         )\n",
+    "lapply(libs, require, character.only = TRUE)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other"
    ]
   },
   {
@@ -56,347 +120,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "library(gstat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(hexbin)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(igraph)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(kableExtra)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(knitr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(lidR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(lme4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(mapdata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(maptools)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(mapview)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(ncdf4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(nlme)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(plyr)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(proj4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RColorBrewer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RandomFields)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RNetCDF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(randomForest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(raster)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RCurl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(reshape2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(rgdal)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(rgeos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(rmarkdown)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(rpostgis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RPostgres)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(RSQLite)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(sf)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(shiny)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(sp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(spacetime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(spatstat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(spdep)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(splancs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tidyverse\n",
-    "library(ggplot2)\n",
-    "library(tibble)\n",
-    "library(tidyr)\n",
-    "library(readr)\n",
-    "library(purrr)\n",
-    "library(stringr)\n",
-    "library(forcats)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(tmap)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(TraMineR)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "library(tufte)"
+    "libs <- c('arm',\n",
+    "            'deldir',\n",
+    "            'feather',\n",
+    "            'geojsonio',\n",
+    "            'ggmap',\n",
+    "            'GISTools',\n",
+    "            'hexbin',\n",
+    "            'igraph',\n",
+    "            'kableExtra',\n",
+    "            'knitr',\n",
+    "            'lme4',\n",
+    "            'nlme',\n",
+    "            'randomForest',\n",
+    "            'RCurl',\n",
+    "            'rpostgis',\n",
+    "            'shiny',\n",
+    "            'splancs',\n",
+    "            'TraMineR',\n",
+    "            'tufte'\n",
+    "         )\n",
+    "lapply(libs, require, character.only = TRUE)"
    ]
   },
   {
@@ -442,7 +186,7 @@
     "               palette=\"-RdYlBu\", contrast=1, \n",
     "               title.size=\"Metro population\", \n",
     "               title.col=\"Growth rate (%)\", id=\"name\") + \n",
-    "    tm_style_gray() + tm_format_World()\n",
+    "    tm_style(\"gray\") + tm_format(\"World\")\n",
     "\n",
     "mapWorld"
    ]
@@ -460,7 +204,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.3"
+   "version": "4.0.2"
   }
  },
  "nbformat": 4,
