--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cenpy"
+    "import boto3"
    ]
   },
   {
@@ -44,7 +44,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import colorama"
+    "import bottleneck"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cenpy"
    ]
   },
   {
@@ -98,15 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dill"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import geopandas"
    ]
   },
@@ -117,6 +117,15 @@
    "outputs": [],
    "source": [
     "import geopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h3"
    ]
   },
   {
@@ -143,6 +152,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ipympl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import ipyparallel"
    ]
   },
@@ -161,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jupyter_book"
+    "import legendgram"
    ]
   },
   {
@@ -180,6 +198,15 @@
    "outputs": [],
    "source": [
     "import nbdime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import netCDF4"
    ]
   },
   {
@@ -233,13 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    import pygeoda\n",
-    "except:\n",
-    "    import warnings\n",
-    "    warnings.warn(\"pygeoda not installed. This may be \"\\\n",
-    "                  \"because the check it's not running on the \"\\\n",
-    "                  \"official container\")"
+    "import pyarrow"
    ]
   },
   {
@@ -267,15 +288,6 @@
    "outputs": [],
    "source": [
     "import pysal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pytest_cov"
    ]
   },
   {
@@ -402,6 +414,84 @@
    "outputs": [],
    "source": [
     "import xlsxwriter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "`pip` installs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ablog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jupyter_book"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import keplergl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    import pygeoda\n",
+    "except:\n",
+    "    import warnings\n",
+    "    warnings.warn(\"pygeoda not installed. This may be \"\\\n",
+    "                  \"because the check it's not running on the \"\\\n",
+    "                  \"official container\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest_cov"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytest_tornasync"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sphinx_press_theme"
    ]
   },
   {
@@ -835,6 +925,17 @@
     "    }\n",
     "})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keplergl import KeplerGl\n",
+    "map_1 = KeplerGl()\n",
+    "map_1"
+   ]
   }
  ],
  "metadata": {
@@ -853,7 +954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
