add (geo)parquet check

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -693,6 +693,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "db.to_parquet('db.pq')\n",
+    "tst = gpd.read_parquet('db.pq')\n",
+    "! rm db.pq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "f, ax = plt.subplots(1)\n",
