Complete gds_py:6.0

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -71,6 +71,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import clustergram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import contextily"
    ]
   },
@@ -98,6 +107,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dask_kubernetes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import dask_ml"
    ]
   },
@@ -116,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import download"
+    "import flake8"
    ]
   },
   {
@@ -296,6 +314,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import psycopg2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import pyarrow"
    ]
   },
@@ -324,15 +351,6 @@
    "outputs": [],
    "source": [
     "import pysal"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import qgrid"
    ]
   },
   {
@@ -413,7 +431,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import statsmodels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urbanaccess"
    ]
   },
   {
@@ -467,7 +512,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ablog"
+    "import download"
    ]
   },
   {
@@ -476,7 +521,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jupyter_book"
+    "import geoalchemy2"
    ]
   },
   {
@@ -485,7 +530,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import keplergl"
+    "import matplotlib_scalebar"
    ]
   },
   {
@@ -527,7 +572,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sphinx_press_theme"
+    "import simplification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import topojson"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import urbangrammar_graphics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask_geopandas"
    ]
   },
   {
@@ -933,7 +1005,15 @@
    "outputs": [],
    "source": [
     "# rioxarray + xarray_leaflet\n",
-    "us = rioxarray.open_rasterio(\"us_cog.tif\")\n",
+    "import xarray\n",
+    "us = xarray.open_rasterio(\n",
+    "    \"us_cog.tif\"\n",
+    ").sel(\n",
+    "    band=1, \n",
+    "    y=slice(7000000, 5000000),\n",
+    "    x=slice(-10000000, -8000000)\n",
+    ")\n",
+    "import xarray_leaflet\n",
     "from ipyleaflet import Map\n",
     "\n",
     "m = Map(zoom=1, basemap=basemaps.CartoDB.DarkMatter)\n",
@@ -946,7 +1026,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "l = us.rio.reproject(\"EPSG:4326\").sel(band=2).leaflet.plot(m)\n",
+    "l = us.astype(\n",
+    "    float\n",
+    ").rio.reproject(\n",
+    "    \"EPSG:4326\"\n",
+    ").leaflet.plot(m)\n",
     "l.interact(opacity=(0.0,1.0))"
    ]
   },
@@ -956,7 +1040,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "! rm us.tif us_cog.tif us_cog_ll.tif"
+    "! rm us.tif us_cog.tif us_cog_ll.tif\n",
+    "! rm -rf cache/"
    ]
   },
   {
@@ -974,17 +1059,6 @@
     "        \"coordinates\": [-118.4563712, 34.0163116]\n",
     "    }\n",
     "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keplergl import KeplerGl\n",
-    "map_1 = KeplerGl()\n",
-    "map_1"
    ]
   }
  ],
@@ -1004,7 +1078,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
