--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -188,6 +188,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import intake_stac"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import ipyleaflet"
    ]
   },
@@ -512,6 +521,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import ablog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dask_geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import download"
    ]
   },
@@ -539,13 +566,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    import pygeoda\n",
-    "except:\n",
-    "    import warnings\n",
-    "    warnings.warn(\"pygeoda not installed. This may be \"\\\n",
-    "                  \"because the check it's not running on the \"\\\n",
-    "                  \"official container\")"
+    "import pygeoda"
    ]
   },
   {
@@ -591,15 +612,6 @@
    "outputs": [],
    "source": [
     "import urbangrammar_graphics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import dask_geopandas"
    ]
   },
   {
