Add dask-labextension and graphviz + add run gds4ae on dev check

--- a/gds_dev/check_dev_stack.ipynb
+++ b/gds_dev/check_dev_stack.ipynb
@@ -154,6 +154,40 @@
     "# rules for Arrow + pandas we just made.\n",
     "conv = rpy2.ipython.rmagic.converter + conv\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `gds4ae`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! wget https://github.com/darribas/gds4ae/archive/refs/heads/master.zip\n",
+    "! unzip master.zip\n",
+    "! cd gds4ae-master && \\\n",
+    "    rm -rf tests && \\\n",
+    "\tmkdir tests && \\\n",
+    "\tjupyter nbconvert --to notebook \\\n",
+    "                      --execute \\\n",
+    "                      --output-dir=tests \\\n",
+    "                      --ExecutePreprocessor.timeout=600 \\\n",
+    "                      --ExecutePreprocessor.ipython_hist_file='' \\\n",
+    "                      content/notebooks/*.ipynb\n",
+    "! rm -rf gds4ae-master master.zip"
+   ]
   }
  ],
  "metadata": {
