Update gds_py to 7.0

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -107,15 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask_kubernetes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import dask_ml"
    ]
   },
@@ -188,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import intake_stac"
+    "import pystac_client"
    ]
   },
   {
@@ -207,15 +198,6 @@
    "outputs": [],
    "source": [
     "import ipympl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ipyparallel"
    ]
   },
   {
@@ -602,7 +584,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import urbangrammar_graphics"
+    "# This is broken at point of release because of:",
+    "#https://github.com/urbangrammarai/graphics/issues/2",
+    "#import urbangrammar_graphics"
    ]
   },
   {
