More edits, still not quite 7.0

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -566,7 +566,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import simplification"
+    "#Does not support Windows/Python3.9 for now",
+    "#import simplification"
    ]
   },
   {
