--- a/gds_dev/check_dev_stack.ipynb
+++ b/gds_dev/check_dev_stack.ipynb
@@ -22,7 +22,15 @@
    "source": [
     "! decktape automatic --chrome-arg=--no-sandbox -s 1280x960 \\\n",
     "    http://darribas.org/gds_course/content/slides/block_D_ii.html \\\n",
-    "    slides.pdf\n",
+    "    slides.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm slides.pdf"
    ]
   },
@@ -41,6 +49,7 @@
    "source": [
     "! wget http://darribas.org/gds4ae/_downloads/44b4bc22c042386c2c0f8dc6685ef17c/neighbourhoods.geojson\n",
     "! tippecanoe -o file.mbtiles neighbourhoods.geojson\n",
+    "\n",
     "! rm file.mbtiles neighbourhoods.geojson"
    ]
   },
@@ -54,13 +63,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "! wget https://github.com/darribas/constitution/raw/gh-pages/_includes/constitution.md \\\n",
     "    -O text.md\n",
     "! pandoc -s text.md -o text.tex\n",
-    "! texbuild text.tex\n",
+    "! texbuild text.tex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm text.md text.pdf text.tex"
    ]
   },
@@ -78,7 +97,15 @@
    "outputs": [],
    "source": [
     "! jb create test_book\n",
-    "! jb build test_book --builder pdfhtml\n",
+    "! jb build test_book --builder pdfhtml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm -rf test_book/"
    ]
   },
@@ -195,7 +222,8 @@
    "hash": "d4d1e4263499bec80672ea0156c357c1ee493ec2b1c70f0acce89fc37c4a6abe"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit ('base': conda)",
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -209,9 +237,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
