--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -341,7 +341,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pysal"
+    "import pysal\n",
+    "import pysal.lib\n",
+    "import pysal.explore\n",
+    "import pysal.model\n",
+    "import pysal.viz"
    ]
   },
   {
@@ -566,8 +570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Does not support Windows/Python3.9 for now",
-    "#import simplification"
+    "#Does not support Windows/Python3.9 for now#import simplification"
    ]
   },
   {
@@ -585,9 +588,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is broken at point of release because of:",
-    "#https://github.com/urbangrammarai/graphics/issues/2",
-    "#import urbangrammar_graphics"
+    "# This is broken at point of release because of:#https://github.com/urbangrammarai/graphics/issues/2#import urbangrammar_graphics"
    ]
   },
   {
@@ -1052,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1066,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
