Add blocks to test gds_course and smds

--- a/gds_dev/check_dev_stack.ipynb
+++ b/gds_dev/check_dev_stack.ipynb
@@ -184,7 +184,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Test content"
    ]
@@ -214,6 +216,48 @@
     "                      --ExecutePreprocessor.ipython_hist_file='' \\\n",
     "                      content/notebooks/*.ipynb\n",
     "! rm -rf gds4ae-master master.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `gds_course`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! wget https://github.com/darribas/gds_course/archive/refs/heads/master.zip\n",
+    "! unzip master.zip\n",
+    "! cd gds_course-master && \\\n",
+    "    make test\n",
+    "! rm -rf gds_course-master master.zip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `smds`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#! wget https://github.com/GDSL-UL/san/archive/refs/heads/master.zip\n",
+    "#! unzip master.zip\n",
+    "#! cd san-master && \\\n",
+    "#    Rscript -e \"library(bookdown); bookdown::render_book('index.Rmd', 'bookdown::gitbook')\"\n",
+    "! rm -rf master.zip san-master"
    ]
   }
  ],
