--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -408,6 +408,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import skfusion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import seaborn"
    ]
   },
