minor edits to dev check

--- a/gds_dev/check_dev_stack.ipynb
+++ b/gds_dev/check_dev_stack.ipynb
@@ -214,7 +214,15 @@
     "                      --output-dir=tests \\\n",
     "                      --ExecutePreprocessor.timeout=600 \\\n",
     "                      --ExecutePreprocessor.ipython_hist_file='' \\\n",
-    "                      content/notebooks/*.ipynb\n",
+    "                      content/notebooks/*.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm -rf gds4ae-master master.zip"
    ]
   },
@@ -234,7 +242,15 @@
     "! wget https://github.com/darribas/gds_course/archive/refs/heads/master.zip\n",
     "! unzip master.zip\n",
     "! cd gds_course-master && \\\n",
-    "    make test\n",
+    "    make test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm -rf gds_course-master master.zip"
    ]
   },
@@ -253,10 +269,18 @@
    },
    "outputs": [],
    "source": [
-    "#! wget https://github.com/GDSL-UL/san/archive/refs/heads/master.zip\n",
-    "#! unzip master.zip\n",
-    "#! cd san-master && \\\n",
-    "#    Rscript -e \"library(bookdown); bookdown::render_book('index.Rmd', 'bookdown::gitbook')\"\n",
+    "! wget https://github.com/GDSL-UL/san/archive/refs/heads/master.zip\n",
+    "! unzip master.zip\n",
+    "! cd san-master && \\\n",
+    "    Rscript -e \"library(bookdown); bookdown::render_book('index.Rmd', 'bookdown::gitbook')\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "! rm -rf master.zip san-master"
    ]
   }
