Add full test suite for geopandas to test_py (via @martinfleis

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -777,6 +777,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Run full suite of geopandas tests\n",
+    "! pytest --pyargs geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pysal import lib as libps\n",
     "shp = libps.examples.get_path('columbus.shp')\n",
     "db = geopandas.read_file(shp)\n",
