--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -2,13 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# Check `GDS` Python stack\n",
     "\n",
     "This notebook checks all software requirements for the course Geographic Data Science are correctly installed. \n",
     "\n",
     "A successful run of the notebook implies no errors returned in any cell *and* every cell beyond the first one returning a printout of `True`. This ensures a correct environment installed."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Imports"
    ]
   },
   {
@@ -107,7 +118,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask_ml"
+    "import dask_geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import dask_ml"
    ]
   },
   {
@@ -390,7 +410,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skimage"
+    "#import skimage"
    ]
   },
   {
@@ -516,16 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import dask_geopandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import download"
+    "import pooch"
    ]
   },
   {
@@ -701,16 +712,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sklearn\n",
-    "float(sklearn.__version__[:4]) >= 0.20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import statsmodels.api as sm\n",
     "float(sm.__version__[2:4]) >= 10"
    ]
@@ -768,17 +769,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run full suite of geopandas tests\n",
-    "! pytest --pyargs geopandas"
+    "## Hardcoded tests"
    ]
   },
   {
@@ -1068,6 +1059,45 @@
     "    }\n",
     "})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## Library tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run full suite of tests\n",
+    "! pytest --pyargs geopandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run full suite of tests\n",
+    "! pytest --pyargs xarray"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run full suite of tests\n",
+    "! pytest --pyargs sklearn"
+   ]
   }
  ],
  "metadata": {
@@ -1086,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
