Remove non-platform explicit file from previous run + try/except cenpy for Census API issues

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -73,8 +73,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cenpy"
+    "#Issues with the Census API\n",
+    "import traceback\n",
+    "try:\n",
+    "    import cenpy\n",
+    "except Exception:\n",
+    "    traceback.print_exc()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
