--- a/gds_py/test_py_stack.ipynb
+++ b/gds_py/test_py_stack.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c7d1f9ba-b1e1-4a6e-b70e-6e353a1171e8",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Run full suite of tests\n",
@@ -25,7 +27,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3566186e-1e43-43fc-99ca-b74418061ab3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Run full suite of tests\n",
@@ -60,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
