Point to .yml file in repo

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -44,7 +44,7 @@
    },
    "outputs": [],
    "source": [
-    "f = 'work/code/gds_env/gds_py/gds_py.yml'\n",
+    "f = './gds_py.yml'\n",
     "bespoke = {\n",
     "    'h3_py': 'h3',\n",
     "    'python_duckdb': 'duckdb',\n",
