remove pip from import

--- a/gds_py/check_py_stack.ipynb
+++ b/gds_py/check_py_stack.ipynb
@@ -58,7 +58,9 @@
     "            l = l.strip('\\n').strip(' ').strip('-').strip(' ')\n",
     "            l = l.split('>=')[0]\n",
     "            libs.append(l)\n",
-    "libs = [i for i in libs if i not in ['conda-forge', 'libgdal-arrow-parquet', 'cenpy']]\n",
+    "libs = [i for i in libs if i not in [\n",
+    "    'conda-forge', 'libgdal-arrow-parquet', 'pip', 'cenpy']\n",
+    "    ]\n",
     "libs = [i.replace('-', '_') for i in libs]\n",
     "libs = [bespoke[i] if i in bespoke else i for i in libs]"
    ]
